Traduccion En progreso

--- a/i18n/es.json
+++ b/i18n/es.json
@@ -1,59 +1,58 @@
 {
-  "title": "NodeBot Workshop",
-  "subtitle": "JavaScriptでのハードウェア制御を楽しもう！",
+  "title": "Taller NodeBots",
+  "subtitle": "Pon tu arduino en marcha con Johnny-Five",
   "exercise": {
-    "blink_blink": "Lチカ",
-    "servo_wave": "サーボウェーブ",
-    "spin_motor_spin": "くるくるモーター回転",
-    "light_switch": "ライトスイッチ",
-    "street_lamp": "ストリートランプ",
-    "ping_bell": "ピング ベル",
-    "robot_arm": "ロボットアーム",
-    "remote_temperature": "遠隔地の温度",
-    "fire_alarm": "火災報知器"
+    "blink_blink": "Blink Blink",
+    "servo_wave": "Saluda el Servo",
+    "light_switch": "Interruptor",
+    "street_lamp": "Lampara de noche",
+    "ping_bell": "Alarma",
+    "robot_arm": "Brazo Robot",
+    "remote_temperature": "Temperatura Remota",
+    "fire_alarm": "Alarma de Incendios"
   },
   "common": {
     "exercise": {
-      "please_wait": "回答をテストしています。お待ちください。。。",
+      "please_wait": "Espera a que se ejecuten las pruebas para tu solucion...",
       "pass": {
-        "create_board_instance": "Boardインスタンスが作成されました。",
-        "create_led_instance": "LEDインスタンスが作成されました。",
-        "create_button_instance": "Buttonインスタンスが作成されました。",
-        "create_speaker_instance": "Piezoインスタンスが作成されました。",
-        "create_thermometer_instance": "Thermometerインスタンスが作成されました。",
-        "create_sensor_instance": "Sensorインスタンスが作成されました。",
-        "create_servo_instance": "Servoインスタンスが作成されました。",
-        "create_motor_instance": "Motorインスタンスが作成されました。",
-        "connect_led_to_pin": "LEDが{{pin}}pinに接続されました。",
-        "connect_button_to_pin": "Buttonが{{pin}}pinに接続されました。",
-        "connect_speaker_to_pin": "Piezoが{{pin}}pinに接続されました。",
-        "connect_thermometer_to_pin": "Thermometerが{{pin}}pinに接続されました。",
-        "connect_sensor_to_pin": "Sensorが{{pin}}pinに接続されました。",
-        "connect_servo_to_pin": "Servoが{{pin}}pinに接続されました。",
-        "connect_motor_to_pin": "Motorが{{pin}}pinに接続されました。",
-        "read_analogue_values": "Values were read from {{pin}}",
-        "pin_mode": "Pin {{pin}} was set to {{mode}} mode",
-        "board_wait_called": "board.waitが呼び出されました。"
+        "create_board_instance": "Instancia del Board creada",
+        "create_led_instance": "Instancia de LED creada",
+        "create_button_instance": "Instancia de Button creada",
+        "create_speaker_instance": "Instancia de Piezo creada",
+        "create_thermometer_instance": "Instancia de Thermometer creada",
+        "create_sensor_instance": "Instancia de Sensor creada",
+        "create_servo_instance": "Instancia de Servo creada",
+        "create_motor_instance": "Instancia de Motor creada",
+        "connect_led_to_pin": "LED conectado al pin {{pin}}",
+        "connect_button_to_pin": "Button conectado al pin {{pin}}",
+        "connect_speaker_to_pin": "Piezo conectado al pin {{pin}}",
+        "connect_thermometer_to_pin": "Thermometer conectado al pin {{pin}}",
+        "connect_sensor_to_pin": "Sensor conectado al pin {{pin}}",
+        "connect_servo_to_pin": "Servo conectado al pin {{pin}}",
+        "connect_motor_to_pin": "Motor conectado al pin {{pin}}",
+        "read_analogue_values": "Los valores se han leido del pin {{pin}}",
+        "pin_mode": "Pin {{pin}} se ha cambiado a modo {{mode}}",
+        "board_wait_called": "board.wait executado"
       },
       "fail": {
-        "create_board_instance": "Boardインスタンスが作成されていません。",
-        "create_led_instance": "LEDインスタンスが作成されていません。",
-        "create_button_instance": "Buttonインスタンスが作成されていません。",
-        "create_speaker_instance": "Piezoインスタンスが作成されていません。",
-        "create_thermometer_instance": "Thermometerインスタンスが作成されていません。",
-        "create_sensor_instance": "Sensorインスタンスが作成されていません。",
-        "create_servo_instance": "Servoインスタンスが作成されていません。",
-        "create_motor_instance": "Motorインスタンスが作成されていません。",
-        "connect_led_to_pin": "LEDがpinに接続されていません。",
-        "connect_button_to_pin": "Buttonがpinに接続されていません。",
-        "connect_speaker_to_pin": "Piezoがpinに接続されていません。",
-        "connect_thermometer_to_pin": "Thermometerがpinに接続されていません。",
-        "connect_sensor_to_pin": "Sensorがpinに接続されていません。",
-        "connect_servo_to_pin": "Servoがpinに接続されていません。",
-        "connect_motor_to_pin": "Motorがpinに接続されていません。",
-        "read_analogue_values": "No values were read from {{pin}}",
-        "pin_mode": "Pin {{pin}} was set to the wrong mode",
-        "board_wait_called": "board.waitが呼び出されていません。"
+        "create_board_instance": "No se a creado instancia de Board",
+        "create_led_instance": "No se a creado instancia de LED",
+        "create_button_instance": "No se a creado instancia de Button",
+        "create_speaker_instance": "No se a creado instancia de Piezo",
+        "create_thermometer_instance": "No se a creado instancia de Thermometer",
+        "create_sensor_instance": "No se a creado instancia de Sensor",
+        "create_servo_instance": "No se a creado instancia de Servo",
+        "create_motor_instance": "No se a creado instancia de Motor",
+        "connect_led_to_pin": "LED conectado al pin incorrecto",
+        "connect_button_to_pin": "Button conectado al pin incorrecto",
+        "connect_speaker_to_pin": "Piezo conectado al pin incorrecto",
+        "connect_thermometer_to_pin": "Thermometer conectado al pin incorrecto",
+        "connect_sensor_to_pin": "Sensor conectado al pin incorrecto",
+        "connect_servo_to_pin": "Servo conectado al pin incorrecto",
+        "connect_motor_to_pin": "Motor conectado al pin incorrecto",
+        "read_analogue_values": "Los valores no se pudieron leer del pin {{pin}}",
+        "pin_mode": "Pin {{pin}} se a cambiado al modo incorrecto",
+        "board_wait_called": "board.wait no se ha llamado"
       }
     }
   },
@@ -169,34 +168,6 @@
         "servo_wait": "servo did not wait for expected time",
         "servo_stop_before_return_to_center": "servo did not stop before returning to center",
         "servo_returned_to_center": "servo did not return to center"
-      }
-    },
-    "spin_motor_spin": {
-      "pass": {
-        "motor_start_called": "motor.start was called",
-        "motor_stop_called": "motor.stop was called",
-        "motor_continually_start_and_stop": "motor continually starts and stops",
-        "motor_started_before_stopped": "motor was started before it was stopped",
-        "motor_start_speed": "motor started at {{speed}}",
-        "board_waited_before_stopping": "Used board.wait to wait {{seconds}} seconds before stopping the motor",
-        "motor_stop_after_seconds": "motor stopped after {{seconds}} seconds",
-        "board_waited_after_stopping": "Used board.wait to wait after stopping the motor",
-        "board_waited_before_starting_again": "Used board.wait to wait {{seconds}} second before starting the motor again",
-        "motor_started_again": "motor started again after {{seconds}} second",
-        "motor_start_again_speed": "motor started again at {{speed}}"
-      },
-      "fail": {
-        "motor_start_called": "motor.start was not called",
-        "motor_stop_called": "motor.stop was not called",
-        "motor_continually_start_and_stop": "motor doesn't continually start and stop",
-        "motor_started_before_stopped": "motor was not started before it was stopped!",
-        "motor_start_speed": "motor not started at {{speed}}",
-        "board_waited_before_stopping": "Didn't use board.wait to wait {{seconds}} seconds before stopping the motor",
-        "motor_stop_after_seconds": "motor didn't stop after {{seconds}} seconds",
-        "board_waited_after_stopping": "Didn't use board.wait to wait after stopping the motor",
-        "board_waited_before_starting_again": "Didn't use board.wait to wait {{seconds}} second before starting the motor again",
-        "motor_started_again": "motor didn't start again after {{seconds}} second",
-        "motor_start_again_speed": "motor not started again at {{speed}}"
       }
     },
     "street_lamp": {
